<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tye.capalyser.frDisclaimer">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="416dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:src="@mipmap/svm_logo"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/txLogo" />

    <TextView
        android:id="@+id/txVers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:text="@string/app_vers"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/txDisclaim"
        app:layout_constraintTop_toTopOf="@+id/txTitel"
        android:layout_marginRight="0dp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/txValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:text="@string/valid_until"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/txVers"
        app:layout_constraintTop_toBottomOf="@+id/txVers"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/txCopR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:text="@string/app_copR"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/txVers"
        app:layout_constraintTop_toBottomOf="@+id/txValid"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/txTitel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="131dp" />

    <TextView
        android:id="@+id/txDisclaim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:gravity="start"
        android:text="@string/disclaim"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txTitel"
        app:layout_constraintBottom_toBottomOf="@+id/txFeedback" />

    <TextView
        android:id="@+id/txFeedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="60dp"
        android:text="@string/txFeedback"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="60dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/swiper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txFeedback"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp">

        <ImageButton
            android:id="@+id/arrLeft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/txLlinks"
            android:src="@drawable/arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txSwipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txSwipe"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txWisch"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <ImageButton
            android:id="@+id/arrRight"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/txRechts"
            android:src="@drawable/arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txSwipe"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
